log
Thu 09 Mar 2023 04:12:11 PM UTC: 
 tests:  0|7
total_score: 0/70
dbb97be
Thu 09 Mar 2023 04:13:21 PM UTC: 
 exercises.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  0|7
total_score: 0/70
cfbf436
Thu 09 Mar 2023 04:14:48 PM UTC: 
 exercises.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  1|6
total_score: 10/70
508f7f3
Sat 11 Mar 2023 07:07:24 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
870997a
Sat 11 Mar 2023 07:10:25 PM UTC: 
 exercises.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘arrayMaxMin’:
exercises.c:34:18: error: expected ‘,’ or ‘;’ before ‘:’ token
   34 |     for(int i = 0: i < n; i++)
      |                  ^
exercises.c:34:30: error: expected ‘;’ before ‘)’ token
   34 |     for(int i = 0: i < n; i++)
      |                              ^
      |                              ;
Compilation failed
2799d28
Sat 11 Mar 2023 07:10:32 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
c46e6a2
